--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
